# ops-node

./: Dockerfile  README.md  docker-compose.yml  dormai.yml  main.py  pyproject.toml
