[project]
name = "openai-node"
version = "0.1.0"
description = ""
authors = [
    {name = "George Kasparyants",email = "gg_plastt@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dormai (>=0.1.3,<0.2.0)",
    "openai (>=1.61.1,<2.0.0)",
    "httpx[socks] (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
